// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When proving remark plugins When plugin has no options it should have rendered the content with the plugin with no options 1`] = `
Array [
  Array [
    "docs/about.md",
    "<h1 id=\\"about-the-project\\"><a href=\\"#about-the-project\\" aria-hidden=\\"true\\" tabindex=\\"-1\\"><span class=\\"icon icon-link\\"></span></a>About the project</h1>
<h2 id=\\"history\\"><a href=\\"#history\\" aria-hidden=\\"true\\" tabindex=\\"-1\\"><span class=\\"icon icon-link\\"></span></a>History</h2>
<p>Description.</p>
<h2 id=\\"where-it-came-from\\"><a href=\\"#where-it-came-from\\" aria-hidden=\\"true\\" tabindex=\\"-1\\"><span class=\\"icon icon-link\\"></span></a>Where it came from</h2>
<p>Description.</p>
<h3 id=\\"but-why\\"><a href=\\"#but-why\\" aria-hidden=\\"true\\" tabindex=\\"-1\\"><span class=\\"icon icon-link\\"></span></a>But why?</h3>
<p>Description.</p>
",
  ],
  Array [
    "docs/how-it-works.md",
    "<h1 id=\\"how-it-works\\"><a href=\\"#how-it-works\\" aria-hidden=\\"true\\" tabindex=\\"-1\\"><span class=\\"icon icon-link\\"></span></a>How it works?</h1>
<p>This is a description.</p>
",
  ],
  Array [
    "packages/package1/components/button.md",
    "<h1 id=\\"button-component\\"><a href=\\"#button-component\\" aria-hidden=\\"true\\" tabindex=\\"-1\\"><span class=\\"icon icon-link\\"></span></a>Button Component</h1>
",
  ],
  Array [
    "packages/package1/components/form/index.md",
    "<h1 id=\\"form-component\\"><a href=\\"#form-component\\" aria-hidden=\\"true\\" tabindex=\\"-1\\"><span class=\\"icon icon-link\\"></span></a>Form Component</h1>
",
  ],
  Array [
    "packages/package1/docs/intro.md",
    "<h1 id=\\"docs-intro\\"><a href=\\"#docs-intro\\" aria-hidden=\\"true\\" tabindex=\\"-1\\"><span class=\\"icon icon-link\\"></span></a>Docs Intro</h1>
",
  ],
  Array [
    "packages/package2/docs/overview.md",
    "<h1 id=\\"this-is-the-overview-page\\"><a href=\\"#this-is-the-overview-page\\" aria-hidden=\\"true\\" tabindex=\\"-1\\"><span class=\\"icon icon-link\\"></span></a>This is the overview page</h1>
<p>This is a <a href=\\"/docs/package1/components/button\\">link to another file in a different package</a>.</p>
",
  ],
  Array [
    "packages/package2/docs/styles.md",
    "<h1 id=\\"how-styles-work\\"><a href=\\"#how-styles-work\\" aria-hidden=\\"true\\" tabindex=\\"-1\\"><span class=\\"icon icon-link\\"></span></a>How styles work</h1>
<p>Short description.</p>
<p>Please refer to <a href=\\"/docs/package2/overview\\">overview</a> to get started.</p>
",
  ],
]
`;

exports[`When proving remark plugins When plugin has options it should have rendered the content with the plugin and their options 1`] = `
Array [
  Array [
    "docs/about.md",
    "<h1 id=\\"about-the-project\\">About the project<a href=\\"#about-the-project\\" aria-hidden=\\"true\\" tabindex=\\"-1\\"><span class=\\"icon icon-link\\"></span></a></h1>
<h2 id=\\"history\\">History<a href=\\"#history\\" aria-hidden=\\"true\\" tabindex=\\"-1\\"><span class=\\"icon icon-link\\"></span></a></h2>
<p>Description.</p>
<h2 id=\\"where-it-came-from\\">Where it came from<a href=\\"#where-it-came-from\\" aria-hidden=\\"true\\" tabindex=\\"-1\\"><span class=\\"icon icon-link\\"></span></a></h2>
<p>Description.</p>
<h3 id=\\"but-why\\">But why?<a href=\\"#but-why\\" aria-hidden=\\"true\\" tabindex=\\"-1\\"><span class=\\"icon icon-link\\"></span></a></h3>
<p>Description.</p>
",
  ],
  Array [
    "docs/how-it-works.md",
    "<h1 id=\\"how-it-works\\">How it works?<a href=\\"#how-it-works\\" aria-hidden=\\"true\\" tabindex=\\"-1\\"><span class=\\"icon icon-link\\"></span></a></h1>
<p>This is a description.</p>
",
  ],
  Array [
    "packages/package1/components/button.md",
    "<h1 id=\\"button-component\\">Button Component<a href=\\"#button-component\\" aria-hidden=\\"true\\" tabindex=\\"-1\\"><span class=\\"icon icon-link\\"></span></a></h1>
",
  ],
  Array [
    "packages/package1/components/form/index.md",
    "<h1 id=\\"form-component\\">Form Component<a href=\\"#form-component\\" aria-hidden=\\"true\\" tabindex=\\"-1\\"><span class=\\"icon icon-link\\"></span></a></h1>
",
  ],
  Array [
    "packages/package1/docs/intro.md",
    "<h1 id=\\"docs-intro\\">Docs Intro<a href=\\"#docs-intro\\" aria-hidden=\\"true\\" tabindex=\\"-1\\"><span class=\\"icon icon-link\\"></span></a></h1>
",
  ],
  Array [
    "packages/package2/docs/overview.md",
    "<h1 id=\\"this-is-the-overview-page\\">This is the overview page<a href=\\"#this-is-the-overview-page\\" aria-hidden=\\"true\\" tabindex=\\"-1\\"><span class=\\"icon icon-link\\"></span></a></h1>
<p>This is a <a href=\\"/docs/package1/components/button\\">link to another file in a different package</a>.</p>
",
  ],
  Array [
    "packages/package2/docs/styles.md",
    "<h1 id=\\"how-styles-work\\">How styles work<a href=\\"#how-styles-work\\" aria-hidden=\\"true\\" tabindex=\\"-1\\"><span class=\\"icon icon-link\\"></span></a></h1>
<p>Short description.</p>
<p>Please refer to <a href=\\"/docs/package2/overview\\">overview</a> to get started.</p>
",
  ],
]
`;
